...
object NutritionTags {
    const val DATE = "nutrition_date"
    const val CALORIE_PROGRESS =
        "nutrition_calorie_progress"
    const val PROTEIN_PROGRESS =
        "nutrition_protein_progress"
    const val MANAGE = "nutrition_manage"
    const val ADD = "nutrition_add"
    const val DATE_CONFIRM =
        "nutrition_date_confirm"
    const val DATE_CANCEL =
        "nutrition_date_cancel"

...
